--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,543 @@
-body,html{
-    margin: 0;
+html,body{
     height: 100%;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+picture,div,ul,li,nav,p,hr,h2{
+    margin: 0;
+    padding: 0;
+}
+
+.container{
+  background: url("/img/page_background\(1\).png") ;
+  background-size: 250%;
+  color: #D5DBE2;
+  grid-template-rows: 120px 1fr 0px;
+  grid-template-columns: 1fr;
+  height: 100%;
+  display: grid;
+  grid-template-areas: 
+  "header"
+  "main"
+  "footer"
+}
+
+
+main{
+    background: url("/img/page_background\(1\).png") ;
+}
+
+
+
+
+
+
+
+/*Nav dena*/
+
+
+header{
+    grid-area: header;
+    background-color: #262E36;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.logo{
+    grid-column: 1;
+    grid-row: 1;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.ongletspages{
+    display: none;
+}
+
+.items{
+    grid-column: 2;
+    grid-row: 1;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 5%;
+    padding:0 5% 0 0 ;
+
+}
+
+#profil,#panier{
+    color: #FFC451;
+}
+
+#profil:hover,#panier:hover{
+    color: #F5E5A9;
+}
+
+
+#profil:visited,#panier:visited{
+    color: #FFC451;
+}
+
+#profil:visited:hover,#panier:visited:hover{
+    color: #F5E5A9;
+}
+#profil:visited:hover{
+    color: #F5E5A9;
+}
+
+#barre{
+    background: #526374;
+    opacity: 0.85;
+    color: #F5E5A9;
+    border: 1px solid #FFC451;
+    border-top-left-radius: 2%;
+    border-top-right-radius: 2%;
+    border-bottom-left-radius: 2%;
+    border-bottom-right-radius: 2%;
+    width: 80%;
+    height: 40%;
+    display: none;
+}
+
+
+
+#barre:focus{
+    outline: none;
+}
+
+.btnsearch{
+    border-style: none;
+    background-color: inherit;
+    color: #FFC451;
+}
+
+#loupe:hover {
+    color: #F5E5A9;
+    scale: 150%;
+}
+
+
+
+
+
+/*ELEMENTS DU HEADER*/
+
+
+/*FIN ELEMENTS DU HEADER*/
+
+/*Mon code*/
+
+.centre{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+main{
+    grid-area: main;
+    text-align: center;
+    padding-top: 3%;
+}
+
+
+
+
+.resize span{
+    font-size: 17px;
+    cursor: pointer;
+    padding: 10px;
+}
+
+.resize{
+    display: flex;
+    height: 100%;
+    width: 15%;
+    justify-content: space-between;
+    padding-right: 20px;
+    align-items: center;
+    font-size: 20px;
+}
+
+
+.marques img{
+    width:80px;
+    height:80px;
+}
+
+.marques{
+    display: flex;
+    gap:3vw;
+    justify-content: center;
+    align-items: center;
+    height: 130px;
+    align-self: center;
+    width:85vw ;
+    padding: 0  15px;
+    background-color: rgba(105, 105, 105, 0.7);
+}
+
+p{
+    padding: 20px;
+}
+
+
+ /* Footer*/
+
+
+.flex{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 15px 0;
+}
+
+ul{
+    list-style: none;
+}
+
+hr{
+    color: inherit;
+    height: 150px;
+}
+
+.reseaux{
+    display: flex;
+    justify-content: center;
+    height: 55px;
+    gap:10px ;
+    font-size: 22px;
+    padding-right: 5px;
+    margin-top:10%;
+}
+
+
+.bas{
+    align-self: flex-end;
+}
+
+footer{
+    background-color: #060F18;
+    grid-area: footer;
+    height: fit-content;
+    font-size: 14px;
+}
+
+
+
+.lien {
+    padding:0 10px;
+    height: 70%;
+}
+
+.cote, .newsletter{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    gap: 20px;
+    padding-left: 5px;
+    text-align: center;
+}
+
+.newsletter{
+    padding-left: 20px;
+    margin-top:10%
+}
+
+
+input,button{
+    background-color: #526374;
+    opacity: 0.8;
+    border: 0.2px solid white;
+    padding: 10px;
+    color:white ;
+}
+
+input:focus,button:focus{
+outline: none;
+transform: scale(1.02);
+border-width: 2px;
+border-color: #FFC451;
+}
+
+button:active{
+ background-color: #FFC451;
+ color:black;
+}
+
+
+
+
+
+.hidden{
+    display:none
+}
+
+
+::placeholder{
+    color: white;
+}
+
+.sociaux {
+    padding: 0 2%;
+}
+
+
+.sociaux:hover {
+    cursor: pointer;
+    transform: scale(0.9);
+}
+
+
+.sociaux.bas{
+    padding-top: 2%;
+
+}
+
+
+/*Liens footer style*/
+
+.footer_liens{
+    color: white;
+    margin: 0 0;
+}
+
+.footer_liens{
+    color: white;
+}
+
+.footer_liens:hover{
+    color: #FFC451;
+    background-color: black;
+}
+
+
+
+.lien ul a{
+    padding: 10px;
+    margin-right: 0 3%;
+    text-align: center;
+}
+
+.lien ul a:hover{
+   text-decoration: underline;
+}
+
+
+
+.lien ul a:visited{
+    color: white;
+ }
+
+ .lien ul a:visited:hover{
+    color: white;
+ }
+
+
+
+
+
+
+     /*Version ordi*/
+
+
+ @media screen and (min-width:1024px) {
+    .flex{font-size: 18px;
+        flex-direction: column-reverse;
+        display: flex;
+
+    }
+    
+    hr.portable{
+        display: none;
+    }
+
+    .lien ul{
+        display:flex;
+        justify-content: center;
+    }
+
+
+    .cote{
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .newsletter{
+        flex-direction: row;
+        gap: 20px;
+        margin: 0;
+    }
+
+
+    #mail{
+        width: 250px;
+    }
+
+    
+    #abonner{
+        width: 150px;
+    }
+
+    .hidden{
+        display: block;
+        text-align: left;
+    }
+
+    .cote,.newsletter{
+        justify-content: flex-start;
+    }
+
+    .cote{
+        align-items: flex-start;
+        
+    }
+
+    .height{
+        width: 70%;
+    }
+
+    hr.ordi{
+        height: 120px;
+    }
+
+    .height2{
+        width: 25%;
+    }
+
+    .height2 h2{
+        text-align: center;
+    }
+
+
+  /*NAv dena*/
+
+
+
+  /*VERSION IPAD ET TEL*/
+
+@media screen and (min-width: 1025px){
+
+
+    .ongletspages{
+        display: block;
+    }
+
+    a {
+        text-decoration: none;
+        font-family: 'Roboto', sans-serif;
+        padding-left: 15px;
+        padding-right: 15px;
+    
+    }
+    
+    a:not(:last-of-type) {
+        border-right: 1px solid #526374;
+    }
+    
+    a:link {
+        color: #FFC451;
+    }
+    
+    a:hover {
+        color: #F5E5A9;
+    }
+    
+    a:visited {
+        color: #FFC451;
+    }
+    
+    a:visited:hover {
+        color: #F5E5A9;
+    }
+    
+    .cbackground{
+        display: flex;
+        flex-direction: column;
+        gap: 45px;
+        padding: 5%;
+        background-color: rgba(105, 105, 105, 0.7);
+    }
+
+    
+}
+
+@media screen and (max-width: 460px){
+    #barre{
+        background: #526374;
+        opacity: 0.85;
+        color: #F5E5A9;
+        border: 1px solid #FFC451;
+        border-top-left-radius: 2%;
+        border-top-right-radius: 2%;
+        border-bottom-left-radius: 2%;
+        border-bottom-right-radius: 2%;
+        width: 100%;
+        height: 20%;
+    }
+
+    .cbackground{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .cbackground{
+        display: flex;
+        flex-direction: column;
+        gap: 45px;
+        padding: 5%;
+        background-color: rgba(105, 105, 105, 0.7);
+    }
+    
+    #cmessage{
+        padding: 0;
+        margin: 0;
+        background: #526374;
+        opacity: 0.85;
+        color: #F5E5A9;
+        border: 1px solid #FFC451;
+        border-top-left-radius: 2%;
+        border-top-right-radius: 2%;
+        border-bottom-left-radius: 2%;
+        border-bottom-right-radius: 2%;
+        width: 320px;
+    }
+    
+    #cid,#cmail{
+        background: #526374;
+        opacity: 0.85;
+        color: #F5E5A9;
+        border: 1px solid #FFC451;
+        border-top-left-radius: 2%;
+        border-top-right-radius: 2%;
+        border-bottom-left-radius: 2%;
+        border-bottom-right-radius: 2%;
+        width: 300px;
+    }
+    
+}
+
+
+}
+
+
+
+
+
+
+/*Version petit écran*/
+
+@media screen and (max-width:412px){
+
+    .marques img{
+        width:70px;
+        height:70px;
+    }
+    
 }
